conclusion to the discussion

--- a/main.ipynb
+++ b/main.ipynb
@@ -2960,39 +2960,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Good"
+    "### The good\n",
+    " \n",
+    "We managed to create a narrative and the visualizations we sketched in part A of the assignment. Significant explanatory variables were found that might explain the difference in number of positives in the different regions of New York City. We observed a correlation between socio-economic status, hereby mainly income and education level and how they relate to ethnicity. We also achieved the main goal of the analysis. Giving the user more awareness of the real factors that are underlying the spread of Coronavirus in New York City. We showed that, clearly, the ethnicities are not the whole picture, there is much more going on, between ethnicities more than within ethnicities. The full understanding cannot come from just this analysis. The point is trying to make anyone reading this aware that the factors that played into the spread of Coronavirus were much more complicated and inter-related than a brief statistical overview of which ethnicities were most hit. Careful consideration of the data showed this.\n",
+    " \n",
+    " \n",
+    "### What to improve\n",
+    " \n",
+    "To mention the things that could be improved will be listed in a point format below<br>\n",
+    "* More data<br>\n",
+    "    * To use a more powerful model, such as a neural network, more data is needed, we only had 177 rows, which is way too little data for a more powerful method.\n",
+    "* Better data<br>\n",
+    "    * To really explore the data and do inference data on individual people is needed, such as for the NYC poverty data we used, the reason we could not use it for analyzing its relationship with the COVID-19, is because we did not have individual COVID-19 data for each person. Another thing would to have medical insurance data for the zip code data.\n",
+    "* The map<br>\n",
+    "    * A three dimensional map would allow us to show the cases directly on the map, this was out of the scope for this course.\n",
+    "* Better analysis<br>\n",
+    "    * We wanted to do a more in depth analysis, to really dig into what might explain the differences in the COVID-19 cases. However, as mentioned earlier, to do this we needed better and more data."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We managed to create a narrative and the visualizations we sketched in part A of the assignment. Significant explanatory variables were found that might explain the difference in number of positives in the different regions of New York City. We observed a correlation between socio-economic status, hereby mainly income and education level and also .  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The bad"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What to improve?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3062,7 +3046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
