the continuation of the boldening 4, the reckoning

--- a/main.ipynb
+++ b/main.ipynb
@@ -2857,8 +2857,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Screenshot of visualization 2](https://raw.githubusercontent.com/apra/newyork_covid19_demographics/master/viz%20screenshots/viz2.png \"Screenshot of visualization 2\")\n",
-    "![Screenshot of visualization 21](https://raw.githubusercontent.com/apra/newyork_covid19_demographics/master/viz%20screenshots/viz2_1.png \"Screenshot of visualization 21\")"
+    "![Screenshot of visualization 2](https://raw.githubusercontent.com/apra/nyc.covid19/master/assets/img/viz2_a.png \"Screenshot of visualization 2\")\n",
+    "![Screenshot of visualization 21](https://raw.githubusercontent.com/apra/nyc.covid19/master/assets/img/viz2_b.png \"Screenshot of visualization 21\")"
    ]
   },
   {
